Partial implementation of adding uploaded pdfs and refactor
