# backend/openapi.json
@@ -42,76 +42,6 @@
             }
           }
         }
-      },
-      "post": {
-        "summary": "Parse PDF and add to planner",
-        "operationId": "parse_pdf_to_planner",
-        "parameters": [
-          {
-            "name": "file_id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "title": "File Id"
-            }
-          },
-          {
-            "name": "day",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "enum": [
-                "odd",
-                "even"
-              ],
-              "type": "string",
-              "title": "Day"
-            }
-          },
-          {
-            "name": "course_id",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "integer"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Course Id"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/PlannerNote"
-                  },
-                  "title": "Response Parse Pdf To Planner"
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
       }
     },
     "/pdfs/upload": {
@@ -136,6 +66,87 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/Eng10Schedule"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/pdfs/add": {
+      "post": {
+        "summary": "Add Canvas PlannerNotes from parsed schedule",
+        "operationId": "add_schedule_to_planner",
+        "parameters": [
+          {
+            "name": "day",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "enum": [
+                "odd",
+                "even"
+              ],
+              "type": "string",
+              "title": "Day"
+            }
+          },
+          {
+            "name": "course_id",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "anyOf": [
+                    {
+                      "type": "integer"
+                    },
+                    {
+                      "type": "null"
+                    }
+                  ],
+                  "description": "Canvas course ID, fails if already set on input schedule"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Course Id"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Eng10Schedule"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/PlannerNote"
+                  },
+                  "title": "Response Add Schedule To Planner"
                 }
               }
             }
